Home Page Slider Added

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,3 +5,27 @@
 .theme-orange-btn{
     background-color: #FF6600;
 }
+
+.theme-orange-btn:hover{
+    background-color: lightsalmon;
+}
+
+.theme-green-btn{
+    background-color: #24A745;
+}
+.theme-green-btn:hover{
+    background-color: lightgreen;
+}
+
+.theme-footer{
+    background-color: #0066c0;
+}
+
+.theme-navbar-light{
+    background-color: #add1f5;
+}
+
+body {
+    font-family: 'Lato', sans-serif;
+  }
+  
